version 8.0
date: dd/mm/yyyy
  * new API for the programmatic creation of STProperties
  * on-the-fly generation of STProperties from JSON Schemas
  * changed the directory where indexes for the global search are stored 
  * allow for configurable dataset catalog connectors
  * add an indication of how to interpret the show of blank nodes in the resource view
  * no-lexicon mode in OntoLex lexical entries view
  * possibility to manipulate the choices made by MAPLE
  * PMKI catalog connector
  * added a new service that uses Lucene indexes to perform translations
  * introduced a new event bus (e.g. for resource-level changes)
  * change the namespace of the vocabulary used by the metadata registry
  * partial modularization of the platform. The following parts were moved to dedicated modules:
    - metadata registry
    - implementations of the extension points
    - utilities
  * added support for cross-bundle session management, necessary to support authentication and authorization
    across bundles (while allowing for new service-level extensions)
  * added custom services with an implementation based on SPARQL
  * added invokable reporters based on custom services
  * added the prefix resolution in all Search services
  * added SHACL to PEARL
  * add a sail for trivial reasoning (based on symmetric / inverse properties)
  * use the Alignment Services API defined by MAPLE
  * Update to MAPLE 0.0.6
  * add a Deployer for submitting an ontology (in fact, an OWL ontology or a SKOS thesaurus) to
    BioPortal-compatible catalogs
  * make both the base URI and the ontology mirror file optional when importing an ontology from a local file
  * port of the remote alignment system (Genoma) is now configurable
  * fix mishandling of status code by HTTP-based deployers
  * fix authentication bug when deleting the remote repositories associated with a project
  * added support in CustomForm for new Pearl annotations
  * updated dependency on Sheet2RDF 4.0.1